# depositsapp

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  custom_email_str.py  exception_handlers.py  security.py  security_user_provider.py
app/routers/: frontend.py  routes.py  users.py
app/schemas/: user_schema.py
app/static/js/: app.js
app/templates/: base.html  index.html  login.html  register.html
app/tests/: test_users.py
